[gd_scene load_steps=4 format=3 uid="uid://b7tw5uf7y37wj"]

[ext_resource type="Script" path="res://scenes/food locations/cooking_station.gd" id="1_1x4xl"]
[ext_resource type="PackedScene" uid="uid://cqlh353itkokj" path="res://scenes/components/interaction/interaction_component.tscn" id="2_pfdus"]
[ext_resource type="Texture2D" uid="uid://b0jyabdm6d1bs" path="res://sprites/clock/Red-Circle-Small-PNG-File.png" id="3_m2ig4"]

[node name="CookingStation" type="StaticBody2D" node_paths=PackedStringArray("interaction_component", "node_holding_item", "timer", "progress_bar")]
script = ExtResource("1_1x4xl")
interaction_component = NodePath("InteractionComponent")
node_holding_item = NodePath("HeldItem")
timer = NodePath("CookTimer")
progress_bar = NodePath("TextureProgressBar")

[node name="HeldItem" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="InteractionComponent" parent="." node_paths=PackedStringArray("collision_shape") instance=ExtResource("2_pfdus")]
collision_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponent"]

[node name="CookTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
step = 0.01
fill_mode = 4
texture_progress = ExtResource("3_m2ig4")

[connection signal="timeout" from="CookTimer" to="." method="_on_cook_timer_timeout"]
